# Final_Final

stock_research_system/: .dockerignore  .env.backup  .env.example  .env.production.example  .gitattributes  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.production.yml  docker-compose.yml  docker-compose.yml.backup  pyproject.toml
stock_research_system/evaluation/: README.md
stock_research_system/evaluation/suites/: finquest-coach-v1.jsonl  finquest-learning-outcomes-v1.json  finquest-portfolio-education-v1.jsonl  finquest-rag-core-v1.jsonl  finquest-safety-v1.jsonl  finquest-scenario-safety-v1.jsonl
stock_research_system/examples/: sample_analysis_request.json
stock_research_system/frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
stock_research_system/frontend/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
stock_research_system/frontend/e2e/: adaptive-practice.spec.ts  auth-lifecycle.spec.ts  coach.spec.ts  diagnostic.spec.ts  fixtures.ts  global-setup.ts  historical-scenario.spec.ts  registration-curriculum.spec.ts  tutor.spec.ts  virtual-portfolio.spec.ts
stock_research_system/frontend/hooks/: useAdaptive.ts  useAuth.ts  useCoachStream.ts  useCurriculum.ts  useDashboard.ts  useDiagnostic.ts  useEvaluationRuns.ts  useExerciseDraft.ts  useIdempotencyKey.ts  useLearningCoach.ts  usePortfolios.ts  useScenarios.ts  useTutor.ts
stock_research_system/frontend/lib/: environment.ts
stock_research_system/frontend/openapi/: finquest-api.json
stock_research_system/frontend/providers/: AppProviders.tsx  AuthProvider.tsx  QueryProvider.tsx
stock_research_system/frontend/scripts/: check-openapi-fresh.mjs
stock_research_system/frontend/tests/: setup.ts  test-utils.tsx
stock_research_system/migrations/: env.py
stock_research_system/n8n/: README.md  credentials.example.md
stock_research_system/scripts/: evaluate_tutor_retrieval.py  export_openapi.py  init_test_db.sql  seed_adaptive_learning_profiles.py  seed_e2e_synthetic_market_data.py  seed_finquest_knowledge_base.py  seed_historical_market_scenarios.py  seed_learning_curriculum.py  seed_quality_evaluation_fixtures.py  wait_for_database.py
stock_research_system/tests/: test_market_data_service.py  test_models.py  test_yfinance_adapter.py  test_yfinance_resolver.py
(+663 files in other folders)
